[package]
name = "batch-poster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = {version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tungstenite = "0.24.0"
futures-util = "0.3.31"
url = "2.5.3"
anyhow = "1.0.93"

ethers = "2.0.14"
brotli = "7.0.0"
serde_json = "1.0.132"
serde = "1.0.215"
base64 = "0.22.1"
rlp = "0.6.1"